Fixed z-index on home slider and header

--- a/content/themes/gp3/scss/partials/header/_header.scss
+++ b/content/themes/gp3/scss/partials/header/_header.scss
@@ -13,6 +13,7 @@
 	width: 100%;
 	@media (min-height: 700px) and (min-width: 1200px) {
 		position: fixed;
+		z-index: 1;
 	}
 	@media print {
 		background: $color-bg;
