--- a/content/themes/gp3/style.css
+++ b/content/themes/gp3/style.css
@@ -312,7 +312,8 @@ small {
   width: 100%; }
   @media (min-height: 700px) and (min-width: 1200px) {
     .header {
-      position: fixed; } }
+      position: fixed;
+      z-index: 1; } }
   @media print {
     .header {
       background: white;
